# hdmedians

./: README.md  pyproject.toml  setup.py
docs/: README_.md
hdmedians/: geomedian.pyi  geomedian.pyx  medoid.pyi  py.typed
